--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0",
     "shadcn": "^3.6.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
