--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/inter": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
+    "@vis.gl/react-maplibre": "^8.1.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.562.0",
+    "maplibre-gl": "^5.16.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
