--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.562.0",
     "maplibre-gl": "^5.16.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
     "shadcn": "^3.6.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
